# GREAT-FGO

./: .gitignore
src/: CMakeLists.txt
src/LibGREAT/: CMakeLists.txt
src/LibGnut/: CMakeLists.txt
src/app/GREAT_GINSFGO/: CMakeLists.txt
src/app/GREAT_MSF/: CMakeLists.txt
src/app/GREAT_PVT/: CMakeLists.txt
src/app/GREAT_PVTFGO/: CMakeLists.txt
